# mpt-tool

./: .coderabbit.yaml  .pre-commit-config.yaml  README.md  dev.Dockerfile  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/: .instructions.md
.github/workflows/: pr-build-merge.yml  release.yml
mpt_tool/: cli.py
tests/: dummy_test.py  test_cli.py
tests/django/: settings.py
